# glyph-engine

./: .gitignore  BUG_FM_UNDERCOUNT_HDFS.md  BUG_PIZZA_CHILI_PREFIX_UNDERCOUNT.md  CMakeLists.txt  CNAME  CONTRIBUTING.md  CORRECTNESS_INVARIANTS.md  DEMO_SECURITY.md  DEMO_SNIPPET.md  EXACT_VERIFICATION_LAYER.md  HDFS_1GB_BENCHMARK.md  HDFS_BENCHMARK.md  LOCATE_CORRECTNESS_NOTES.md  OVH_PRECHECK_v1.md  PATENT_RISK_AUDIT_v2.md  PRODUCT_BASELINE_v1.md  README.md  ROADMAP.md  RUNBOOK_4GB.md  SEGMENTED_8GB_PLAN.md  SPEC.md  THIRD_PARTY_NOTICES.md  WHAT_GLYPH_IS_NOT.md  bench_1gb_persistent.py  bench_hdfs_1gb.sh  glyph_cli.py  glyph_cli_v2.py  glyph_http_query_v1.py  glyph_http_server.py  glyph_live_benchmark_v1.py  glyph_live_benchmark_v2.py  glyph_live_retrieve.py  glyph_retrieve_v2.py  glyph_segmented_live.py  glyph_segmented_query_v1.py  glyph_segmented_retrieve_v1.py  glyph_segmented_retrieve_v2.py  glyph_server_client_v1.py  index.html  llms.txt  (+4 more)
.github/: FUNDING.yml
REFERENCE_BENCH/: README.md
archive/: README.md  glyph_http_server_v2.py  glyph_live_retrieve_v1.py  glyph_live_retrieve_v2.py  glyph_retrieve_v1.py  glyph_segmented_live_v1.py  glyph_segmented_live_v2.py
bench_queries/: basic_1000_v1.txt  basic_v1.txt
benchmarks/: BACKWARD_SEARCH_BENCH_V1.md  BENCHMARK_RULES.md  ENWIK9_PUBLIC_BENCH_RUNBOOK_V1.md  HDFS_1GB_COLD_CACHE_PXX.md  HDFS_1GB_PERSISTENT_PXX.md  LAYOUT_PROFILE_MATRIX_V1.md  MACHINE_SPEC.md  MACHINE_SPEC_TEMPLATE.md  OCC_BENCH_V1.md  OCC_DATASET_V1.md  OCC_RESULT_FORMAT_V1.md  PERSISTENT_LATENCY_BENCH_V1.md  PLATFORM_COMPARISON.md  PUBLIC_BENCH_EXPECTATIONS_V1.md  README.md  SCOPES.md  SEGMENTED_2SHARD_PXX.md  SEGMENTED_8GB_DEMO.md  SEGMENTED_FIXED_CORRECTNESS.md  SEGMENTED_REAL_1GB.md  TRUE_STEADY_STATE_REPEATABILITY_V1.md  WINDOWS_ENWIK8_BENCH_V1.md  cold_warm_v1.py  persistent_fm_v1.py  segmented_fanout_v1.py  windows_persistent_bench_v1.py
config/: shards_8gb_demo.json
docs/: index.html
manifests/: segmented_1gb_fixed.json  segmented_1gb_real.json  segmented_8gb_demo.json
research/: GLYPH_FRONTIER_LAW_V1.md  OPENZL_NOTES.md
site/: index.html
src/: bench_backward_search_v1.cpp  bench_occ_step_v1.cpp  bench_occ_v1.cpp  binary_runtime_v1_format.hpp  build_bwt.cpp  build_bwt_binary_v1.cpp  build_bwt_sentinel_v1.cpp  build_chunk_map.cpp  build_chunk_map_u24.cpp  build_fm.cpp  build_fm_binary_v1.cpp  build_sa.cpp  build_sa_binary_v1.cpp  build_sa_sentinel_v1.cpp  build_sa_u32.cpp  bwt_backend_v1.cpp  fm_chunk_hist_backend_v1.cpp  locate_backend_v1.cpp  locate_backend_v2.cpp  occ_simd_v1.h  query_fm_batch_v1.cpp  query_fm_binary_v1.cpp  query_fm_core_v1.cpp  query_fm_locate_binary_v1.cpp  query_fm_server_v1.cpp  query_fm_v1.cpp  rlbwt_full_query_locate_limit_v1.cpp  rlbwt_full_query_locate_server_v1.cpp  rlbwt_full_query_locate_summary_v1.cpp  rlbwt_full_query_locate_v1.cpp  rlbwt_locate_core_v1.cpp  rlbwt_query_core_v1.cpp  sa_backend_v1.cpp  sa_check_v1.cpp  shortlist_backend_v1.cpp  shortlist_backend_v2.cpp
tests/: run_tests.sh  test_audit_artifact_v0.py  test_capability_probe_v1.py  test_evidence_case_v1.py  test_fm_cli_correctness.py  test_golden_queries_v1.py  test_http_query_protocol_v1.py  test_locate_verify.py  test_manifest_integrity.py  test_query_protocol_v1.py  test_query_server_protocol_v1.py  test_query_verified.py  test_runtime_gate_v1.py  test_sa_container_reader_v1.py  test_sa_container_v1.py
(+1388 files in other folders)
